<resources>
    <string name="app_name">LanRecord</string>
    <string name="action_settings">Settings</string>
    <string name="add_game">Add game</string>
    <string name="map_title">Map: </string>
    <string name="score_title">Score: </string>
    <string name="hint_your_score">Your score</string>
    <string name="hint_enemy_score">Enemy score</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>
